--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
   },
+  "proxy": "http://localhost:3001/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "server": "nodemon ./index.js --ignore src/",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "semistandard": "^12.0.1"
   }
 }
