--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.13",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "proxy": "http://localhost:3001/",
@@ -18,7 +21,8 @@
     "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seeds": "node api/seeds/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +35,7 @@
   ],
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "nodemon": "^1.18.6",
     "semistandard": "^12.0.1"
   }
 }
