--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "jsonwebtoken": "^8.3.0",
     "mapbox-gl": "^0.52.0-beta.1",
     "mongoose": "^5.3.13",
+    "nodemon": "^1.18.6",
     "react": "^16.6.0",
+    "react-dom": "^16.6.3",
     "react-map-gl": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
@@ -40,7 +42,6 @@
   ],
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.6",
     "semistandard": "^12.0.1"
   }
 }
