--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.6.1",
-    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
+    "bootstrap": "^4.2.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "mapbox-gl": "^0.52.0-beta.1",
     "mongoose": "^5.3.13",
-    "nodemon": "^1.18.6",
+    "nodemon": "^1.18.9",
+    "popper.js": "^1.14.6",
     "react": "^16.6.0",
     "react-dom": "^16.6.3",
     "react-map-gl": "^4.0.5",
@@ -22,7 +22,7 @@
   },
   "proxy": "http://localhost:3001/",
   "scripts": {
-    "start": "concurrently --kill-others-on-fail –display-error-details \"npm run server\" \"npm run client\"",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "server": "nodemon ./index.js --ignore src/",
     "client": "react-scripts start",
     "build": "react-scripts build",
@@ -42,6 +42,7 @@
   ],
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "semistandard": "^12.0.1"
   }
 }
